# puc-inf2921-c

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: CHANGELOG.md  CHEATSHEET.md  settings.json  settings.local.json
.claude/agents/: architecture-explainer.md  code-reviewer.md  communication-generator.md  council-debate.md  document-generator.md  evolution-explainer.md  explanation-generator.md  harness-health-evaluator.md  migration-validator.md  onboarding-generator.md  plan-reviewer.md  research-reviewer.md  semiotic-inspector.md  standards-checker.md  test-plan-generator.md  test-runner.md
.claude/rules/: harness-structure.md  tests.md
.claude/skills/: VERSION  skills-manifest.json
_output/: .check-git-freshness-stamp  .pending-cleanup-stamp  .pending-periodic-stamp  .periodic-curation-stamp  INDEX.md  briefs-index.md  briefs.md  decision-digest.jsonl  pending.jsonl  telemetry.jsonl
_output/advisory-logs/: advisory-000002-atlas-georreferenciado-amazonia-ia.md  (+6 more)
agents/: mcp_server.py
knowledge/: Reuniao-23-04-2026.md  casos-de-uso.md  datasets.md  dump-grupo-wpp-24-05-2026.txt  plan-000033-done-create-kb-qa-generic-rag-repository.md  plan-000033-qa-create-kb-qa-generic-rag-repository.md  qa-000001-heterogeneous-data-nl-interfaces-llm-agent-as-data-analyst.md  tutorials.md
product-design/: conventions.md
src/kb_qa/: __init__.py  cli.py  (+5 more)
tests/: test_ingest.py  test_loader.py
tttc-poc/: .env.poc  Dockerfile.express-poc  Dockerfile.nextclient-poc  Dockerfile.pyserver-poc  Makefile  README-poc.md  docker-compose.yml
(+226 files in other folders)
