[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kb-qa"
version = "0.1.0"
description = "Generic RAG knowledge base — ingest .md and .pdf files into ChromaDB and expose query_knowledge via MCP"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pymupdf>=1.24",
    "mcp[cli]>=1.0",
    "anthropic>=0.40",
    "click>=8.0",
    "einops>=0.8.2",
]

[project.scripts]
kb-qa = "kb_qa.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyright",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kb_qa"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.13"
include = ["src"]
strict = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
